Language: Update language terms

--- a/assets/locales/de.json
+++ b/assets/locales/de.json
@@ -189,7 +189,7 @@
     "Chamilo\\'s installation wizard": "Chamilo\\'s installation wizard",
     "Keyword": "Schlagwort",
     "Assignment name": "Name der Ausarbeitung",
-    "Description": "Kursbeschreibung",
+    "Description": "Beschreibung",
     "Maximum score": "Max. Punkte",
     "Add to gradebook": "Beurteilung erm\u00f6glichen",
     "Select assessment": "Bewertung ausw\u00e4hlen",
