--- a/assets/locales/fr_FR.json
+++ b/assets/locales/fr_FR.json
@@ -189,7 +189,7 @@
     "Chamilo\\'s installation wizard": "Chamilo\\'s installation wizard",
     "Keyword": "Mot-cl\u00e9",
     "Assignment name": "Nom du travail",
-    "Description": "Description de ce cours",
+    "Description": "Description",
     "Maximum score": "Qualification num\u00e9rique sur",
     "Add to gradebook": "Activer dans le cahier de notes",
     "Select assessment": "S\u00e9lectionner l'\u00e9valuation",
@@ -426,7 +426,7 @@
     "Here you can manage registered users within your platform": "G\u00e9rez les utilisateurs inscrits sur votre plateforme",
     "User management": "Gestion des utilisateurs",
     "Create and manage your courses in a simple way": "Cr\u00e9ez et g\u00e9rez vos cours en toute simplicit\u00e9",
-    "Course management": "Gestion des courss",
+    "Course management": "Gestion des cours",
     "Create course packages for a certain time with training sessions": "Cr\u00e9ez des groupements de cours sur des p\u00e9riodes de temps d\u00e9termin\u00e9es",
     "Sessions management": "Gestion des sessions",
     "Manage the skills of your users, through courses and badges": "G\u00e9rez les comp\u00e9tences de vos utilisateurs au travers de cours et de badges",
@@ -557,7 +557,7 @@
     "A database with the same name <b>already exists</b>.": "Une base de donn\u00e9e du m\u00eame nom existe d\u00e9j\u00e0. Si vous utilisez cette base, son contenu actuel sera \u00e9cras\u00e9.",
     "To protect your site, make the whole %s directory read-only (chmod -R 0555 on Linux) and delete the %s directory.": "Pour prot\u00e9ger votre installation, mettez le r\u00e9pertoire {0} en lecture seule (chmod -R 0555 sous Linux) et supprimez compl\u00e8tement le r\u00e9pertoire {1}",
     "Cannot find your language in the list? Contact us at info@chamilo.org to contribute as a translator.": "Votre langue n'est pas dans la liste\u202f? Contactez-nous \u00e0 info@chamilo.org pour contribuer en tant que traducteur.",
-    "Please read the following requirements thoroughly.": "Please read the following requirements thoroughly.",
+    "Please read the following requirements thoroughly.": "Pr\u00e9-requis suivants \u00e0 lire attentivement.",
     "Recommended settings for your server configuration. These settings are set in the php.ini configuration file on your server.": "Param\u00e8tres recommand\u00e9s pour tourner Chamilo. Ces param\u00e8tres sont attribu\u00e9s dans le fichier de configuration php.ini sur votre serveur.",
     "Some directories and the files they include must be writable by the web server in order for Chamilo to run (user uploaded files, homepage html files, ...). This might imply a manual change on your server (outside of this interface)": "Some directories and the files they include must be writable by the web server in order for Chamilo to run (user uploaded files, homepage html files, ...). This might imply a manual change on your server (outside of this interface)",
     "Chamilo is free software distributed under the GNU General Public licence (GPL).": "Chamilo est un logiciel libre distribu\u00e9 sous la licence GNU General Public Licence (GPL).",
