--- a/translations/messages.de.po
+++ b/translations/messages.de.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: chamilo\n"
-"PO-Revision-Date: 2024-07-19 21:50+0000\n"
+"PO-Revision-Date: 2024-07-25 12:36+0000\n"
 "Last-Translator: Yannick Warnier <ywarnier@chamilo.org>\n"
 "Language-Team: German <https://translation.chamilo.org/projects/chamilo/"
 "messages/de/>\n"
@@ -1829,7 +1829,7 @@ msgid "Trainer"
 msgstr "Kursleiter"
 
 msgid "Description"
-msgstr "Kursbeschreibung"
+msgstr "Beschreibung"
 
 msgid "Course backup"
 msgstr "Kurs Backup"
@@ -26193,8 +26193,8 @@ msgstr ""
 msgid "Add a disclaimer below the career diagram. A language variable called 'Career diagram disclaimer' must exist in your sub-language."
 msgstr ""
 "Fügen Sie unterhalb des Karrierediagramms einen Haftungsausschluss hinzu. "
-"Eine Sprachvariable mit dem Namen 'Haftungsausschluss zum Karrierediagramm' "
-"muss in Ihrer Subsprache existieren."
+"Eine Sprachvariable mit dem Namen 'Career diagram disclaimer' muss in Ihrer "
+"Subsprache existieren."
 
 msgid "Use course categories from top URL"
 msgstr "Verwenden Sie Kurskategorien aus der oberen URL"
@@ -27750,8 +27750,8 @@ msgstr ""
 msgid "Add a career legend below the career diagram. A language variable called 'Career diagram legend' must exist in your sub-language."
 msgstr ""
 "Fügen Sie eine Legende zur Karrieregrafik unterhalb des Karrierediagramms "
-"hinzu. Eine Sprachvariable mit dem Namen 'Legende des Karrierediagramms' "
-"muss in Ihrer Subsprache vorhanden sein."
+"hinzu. Eine Sprachvariable mit dem Namen 'Career diagram legend' muss in "
+"Ihrer Subsprache vorhanden sein."
 
 msgid "Forum notifications from base course as well"
 msgstr "Forum-Benachrichtigungen auch aus dem Basis-Kurs"
